# guide-pytest-selenium-cookies

./: .gitignore  pyproject.toml  requirements.txt  run.bat  run.sh
src/pytest_selenium_cookies/: __init__.py
test/: allurified_cookie_test.py  conftest.py  cookie_test.py  cookies.json
